plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-android'
    id 'kotlin-kapt'
    id 'com.google.dagger.hilt.android'
    id 'dagger.hilt.android.plugin'
    id 'androidx.navigation.safeargs.kotlin'
    id 'kotlin-parcelize'
}

android {
    namespace 'workwork.test.andropediagits'
    compileSdk 33

    defaultConfig {
        applicationId "workwork.test.andropediagits"
        minSdk 26
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "workwork.test.andropediagits.HiltTestRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    buildFeatures {
        viewBinding true
    }
    subprojects.forEach {
        it.tasks.withType(Test).configureEach {
            jvmArgs = [
                    "--add-opens"
            ]
        }

    }

}

dependencies {

    // adding Admob SDK
    implementation 'com.google.android.gms:play-services-ads:22.4.0'
    implementation 'com.google.android.ump:user-messaging-platform:2.1.0'


    implementation "com.google.android.play:review-ktx:2.0.1"
    implementation "com.google.android.play:review:2.0.1"

        implementation "com.airbnb.android:lottie:6.1.0"


    implementation 'com.github.mukeshsolanki.android-otpview-pinview:otpview:3.1.0'
    implementation 'com.google.code.gson:gson:2.8.9'

    /*  implementation 'com.vk:android-sdk-core:3.x.x'
      implementation 'com.vk:android-sdk-api:3.x.x' // generated models and api methods*/
    androidTestImplementation("androidx.work:work-testing:2.8.1")
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"

    implementation 'com.google.android.gms:play-services-base:18.2.0'
    implementation "com.android.billingclient:billing-ktx:6.0.1"
    implementation "com.android.billingclient:billing:6.0.1"
    // Fragment
    implementation 'androidx.fragment:fragment-ktx:1.5.7'
    implementation 'com.google.android.gms:play-services-auth:20.5.0'

    def navVersion = "2.5.3"
    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
    //Coil
    implementation 'io.coil-kt:coil:2.3.0'

    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"

    // Retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
//    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"

    // Room
    implementation "androidx.room:room-ktx:2.5.1"
    implementation "androidx.room:room-runtime:2.5.1"
    kapt "androidx.room:room-compiler:2.5.1"
    // testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.1.1"
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    ///workmanager
    implementation "androidx.work:work-runtime-ktx:2.8.1"

    // Instrumentation tests
    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.37'
    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.45'
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation "com.google.truth:truth:1.1.3"
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
    androidTestImplementation "io.mockk:mockk-android:1.10.5"
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'

    // Local unit tests
    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
    testImplementation "androidx.test:core:1.5.0"
    testImplementation "io.mockk:mockk-android:1.10.5"
    testImplementation "junit:junit:4.13.2"
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    testImplementation "com.google.truth:truth:1.1.3"
    testImplementation "io.mockk:mockk:1.10.5"
    implementation "androidx.preference:preference-ktx:1.2.1"

    ///Update app google
    implementation "com.google.android.play:app-update-ktx:2.1.0"
    implementation "com.google.android.play:app-update:2.1.0"

    implementation ("com.google.guava:guava:24.1-jre")
    implementation ("com.google.guava:guava:27.0.1-android")


    // Dagger - Hilt
    implementation "com.google.dagger:hilt-android:2.45"
    kapt "com.google.dagger:hilt-android-compiler:2.45"
    implementation "androidx.hilt:hilt-work:1.0.0"

    // Coroutines
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'

    implementation "androidx.core:core-splashscreen:1.0.1"

    implementation "androidx.datastore:datastore-preferences:1.0.0"
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'


    implementation 'com.google.code.gson:gson:2.10.1'
}